Build and link jsmn

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 # set up compiler
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -g -Wall -Wextra -pedantic")
+include_directories("${CMAKE_SOURCE_DIR}/contrib/jsmn")
 
 add_executable(
   spreden
@@ -9,6 +10,7 @@ add_executable(
 
 target_link_libraries(
   spreden
+  jsmn
   guile-2.0
 )
 
