--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,14 @@
 # set up compiler
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -g -Wall -Wextra -pedantic")
+add_definitions("-D_POSIX_SOURCE")
+add_definitions("-D_XOPEN_SOURCE=500")
 include_directories("${CMAKE_SOURCE_DIR}/contrib/jsmn")
 
 add_executable(
   spreden
   list.c
   main.c
+  rc.c
 )
 
 target_link_libraries(
