Get CMake working with new dir structure

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,16 +4,21 @@ add_definitions("-D_POSIX_SOURCE")
 add_definitions("-D_XOPEN_SOURCE=500")
 include_directories("${CMAKE_SOURCE_DIR}/contrib")
 
+# build subtrees
+add_subdirectory(database)
+add_subdirectory(dstruct)
+add_subdirectory(runcontrol)
+
 add_executable(
   spreden
-  db.c
-  list.c
-  main.c
-  rc.c
+  spreden.c
 )
 
 target_link_libraries(
   spreden
+  spreden-database
+  spreden-runcontrol
+  spreden-dstruct
   uuid
   yajl
   guile-2.0
