--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -g -Wall -Wextra -pedantic")
 add_definitions("-D_POSIX_SOURCE")
 add_definitions("-D_XOPEN_SOURCE=500")
+add_definitions("-D_BSD_SOURCE")
 include_directories("${CMAKE_SOURCE_DIR}/contrib")
 
 # build subtrees
